Don't create MostVisitedSites in incognito

With NTPTilesInInstantService enabled, InstantService attempts to create
a MostVisitedSites instance even in incognito profiles, which caused a
crash.
This CL changes ChromeMostVisitedSitesFactory to return nullptr for
incognito profiles, and also updates InstantService to properly handle
the returned nullptr.

BUG=687507

Review-Url: https://codereview.chromium.org/2672443002
Cr-Commit-Position: refs/heads/master@{#447495}

Former-commit-id: 837e405817fcb63cd3652381d3fb8aae3c28e16d